Add more general information

Display designer, manufacturer, license and glyph count.
This is generally interesting information about a font.

https://bugzilla.gnome.org/show_bug.cgi?id=787759